--- a/style.css
+++ b/style.css
@@ -124,6 +124,10 @@ body {
   animation: fadeInUp 1s ease-in-out forwards; 
 }
 
+.disclaimer {
+  display: none;
+}
+
 /* Responsividade para telas menores */
 @media (max-width: 768px) {
   .layout {
@@ -150,22 +154,22 @@ body {
   .title {
     font-size: 2rem;
     font-weight: bold;
-    margin: 0.5rem 0; 
   }
 
   .subtitle {
     font-size: 1rem;
     color: #ccc;
     margin-bottom: 1rem;
+    text-align: left;
   }
 
   .description {
     font-size: 0.9rem;
-    line-height: 1.6;
     color: #ccc;
-    max-width: 90%; 
-    text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+    padding: 0%;
+    padding-right: 5%;
+    text-align: left;
   }
 
   /* Títulos das seções */
@@ -205,10 +209,23 @@ body {
     color: #ccc;
   }
 
-  .card-linkedin,
-  .card-github,
-  .card-portfolio {
-    width: 90%;
+  img[src="images/Linkedin.png"],
+  img[src="images/Github.png"],
+  img[src="images/Portfolio.png"] {
+    width: 100%;
     height: auto;
+    margin-bottom: -10px;
+  }
+  img[src="images/Figma.png"],
+  img[src="images/Behance.png"] {
+    margin-bottom: 20px;
+  }
+
+  .disclaimer {
+    display: flex;
+    font-size: 10px;
+    color: #ccc;
+    text-align: center;
+    margin-bottom: 20px;
   }
 }
